[package]
name = "olympus-pro-subsidy-router"
version = "1.0.0"
authors = ["Sandclock Ecosystem"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.2" }
terra-cosmwasm = "2.2.0"
schemars = "0.8.7"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
olympus-pro = { version = "1.0.0", path = "../../packages/olympus_pro" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2", default-features = false  }
